Import of AMALTSEV/XAO-PodView-1.03 from CPAN.
gitpan-cpan-distribution: XAO-PodView
gitpan-cpan-version:      1.03
gitpan-cpan-path:         AMALTSEV/XAO-PodView-1.03.tar.gz
gitpan-cpan-author:       AMALTSEV
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -95,11 +95,12 @@ EXPORTS
     Nothing.
 
 AUTHOR
-    Copyright (c) 2001 XAO Inc.
+    Copyright (c) 2005 Andrew Maltsev
 
-    Andrew Maltsev <am@xao.com>.
+    Copyright (c) 2001-2004 Andrew Maltsev, XAO Inc.
+
+    <am@ejelta.com> -- http://ejelta.com/xao/
 
 SEE ALSO
-    Recommended reading: the XAO::Web manpage, the XAO::DO::Web::Page
-    manpage.
+    Recommended reading: XAO::Web, XAO::DO::Web::Page.
 
